--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mongoose": "^8.9.7",
     "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
+    "next-cloudinary": "^6.17.4",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.7.15",
@@ -53,6 +54,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-share": "^5.2.2",
     "recharts": "^2.15.2",
     "slugify": "^1.6.6",
