--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
@@ -59,6 +60,7 @@
     "recharts": "^2.15.2",
     "slugify": "^1.6.6",
     "sonner": "^2.0.3",
+    "streamifier": "^0.1.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.5.1",
